# viralQC

./: .gitignore  Dockerfile  MANIFEST.in  README.md  env.yml  pyproject.toml
.github/workflows/: publish-to-pypi.yml  tests.yml
docs/: commands.md  conf.py  index.md  installation.md  output.md  prepare-ncbi-submission.md  scoring.md  testing.md
docs-pt/: commands.md  conf.py  index.md  output.md  prepare-ncbi-submission.md  scoring.md  testing.md
docs-pt/_static/: custom.css
tests/: conftest.py  test_ncbi_submission.py  test_run_analysis.py  test_scripts_python.py
viralqa/: __init__.py  api.py  cli.py
viralqa/config/: nextclade_datasets.yml
viralqa/core/: datasets.py  errors.py  models.py  run_nextclade.py  utils.py
viralqa/scripts/: get_public_datasets.smk  run_nextclade.smk
viralqa/scripts/python/: format_nextclade_sort.py  post_process_nextclade.py
viralqc/: api.py  cli.py
viralqc/commands/prepare_ncbi_submission/: sample.py  virus.py
viralqc/config/: datasets.yml  nextclade_datasets.yml
viralqc/core/: __init__.py  datasets.py  ncbi_submission.py  prepare_submission.py  run_nextclade.py  utils.py
viralqc/scripts/: get_blast_database.smk  get_public_datasets.smk  run_analysis.smk  run_nextclade.smk
viralqc/scripts/python/: blast_wrapper.py  extract_target_regions.py  format_nextclade_sort.py  get_minimizer_index.py  itemize_sequences.py  post_process_nextclade.py  reorder_cds.py  split_gff_by_sample.py  split_tbl_by_sample.py  validate_fasta.py
